# syslog-ng

./: configure.ac  requirements.txt  syslog-ng-config.h.in
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  devshell.yml  freebsd.yml  macos.yml  publish-docker-image.yml
cmake/Modules/: FindLIBUNWIND.cmake
dbld/: packages.manifest  rules
docker/: Dockerfile
examples/: .hdfscli.cfg  core-site.xml  syslog-ng.TEST.HDFS.conf
lib/: cfg-grammar.y  cfg-parser.c  cfg.c  console.c  console.h  gprocess.c  logpipe.c  logreader.c  logscheduler.c  logscheduler.h  mainloop-control.c  resolved-configurable-paths.c  resolved-configurable-paths.h
lib/debugger/: debugger-main.c  debugger-main.h  debugger.c  debugger.h
lib/eventlog/src/: evt_internals.h  evtlog.h  evtrec.c  evtsyslog.c
lib/libhdfs3/include/hdfs/: hdfs.h
lib/libhdfs3/lib/: libhdfs3.so.1
lib/libhdfs3/lib/pkgconfig/: libhdfs3.pc
lib/logproto/: logproto-client.h  logproto-http-scraper-responder-server.c  logproto-http-server.h
modules/: CMakeLists.txt
modules/affile/: directory-monitor-poll.c  file-reader.c
modules/affile/tests/: test_collection_comparator.c
modules/afsocket/: afsocket-grammar.ym  afsocket-source.c
modules/grpc/bigquery/: bigquery-dest.cpp
modules/grpc/otel/tests/: CMakeLists.txt
modules/hdfs/: CMakeLists.txt  CMakeLists_libMapR.txt  hdfs-grammar.ym  hdfs-parser.c  hdfs-parser.h  hdfs-plugin.c  hdfs_destination.c  hdfs_destination.h  hdfs_destination_worker.c  hdfs_destination_worker.h
modules/http/: http.c
scl/stats-exporter/: plugin.conf
syslog-ng/: main.c
syslog-ng-ctl/: control-client-unix.c  control-client.h  syslog-ng-ctl.c
syslog-ng-ctl/commands/: attach.c  commands.c
tests/copyright/: policy
